--- a/chatRoomServer/makefile
+++ b/chatRoomServer/makefile
@@ -1,7 +1,7 @@
 objects = chatRoomServer.o main.o
 
-chatRoom:$(objects)
-	g++ -std=c++11 -pthread $(objects) -o chatRoom
+chatRoomServer:$(objects)
+	g++ -std=c++11 -pthread $(objects) -o chatRoomServer
 
 chatRoomServer.o:chatRoomServer.cpp
 	g++ -std=c++11 -pthread -c chatRoomServer.cpp
@@ -10,4 +10,4 @@ main.o:main.cpp
 	g++ -std=c++11 -c main.cpp
 
 clean:
-	rm chatRoom $(objects)
+	rm chatRoomServer $(objects)
